--- a/project.html
+++ b/project.html
@@ -24,21 +24,21 @@
         <img src="screencapture-file-C-Users-Teacher-OneDrive-Desktop-Afghamistan-Balkh-html-2025-06-05-22_28_44.png" alt="Project 1" id="pic"><hr>
         <h3>About AFG</h3>
         <p>Information about AFG using only HTML and CSS.</p>
-        <a href="https://maryamfariwar.github.io/afghanistan/" >View Project</a>
+        <a href="https://maryamfariwar.github.io/afghanistan/" >View Project</a><br><br><br><br><br><br><br>
       </div>
 
       <div class="project-card fade-in">
         <img src="screencapture-file-C-Users-Teacher-OneDrive-Desktop-assigment-index-html-2025-06-05-22_27_16.png" alt="Project 2" id="pic1"><hr>
         <h3>personal</h3>
         <p>A simple personal Web using HTML.</p>
-        <a href="https://maryamfariwar.github.io/My-site/" target="_blank">View Project</a>
+        <a href="https://maryamfariwar.github.io/My-site/" target="_blank">View Project</a><br><br><br><br><br><br><br>
       </div>
 
       <div class="project-card fade-in">
         <img src="screencapture-file-C-Users-Teacher-OneDrive-Desktop-HTML-Theather-index-html-2025-06-05-22_29_10.png" alt="Project 3" id="pic2"><hr>
         <h3>theather</h3>
         <p>theather project, Short beautiful video about life</p>
-        <a href="https://maryamfariwar.github.io/my-theater/" >View Project</a>
+        <a href="https://maryamfariwar.github.io/my-theater/" >View Project</a><br><br><br><br><br><br><br>
       </div>
     </div>
   </section>
